# aocli

./: Cargo.toml  README.md
src/: config.rs  error.rs  http.rs  main.rs
src/commands/: config.rs  fetch_input.rs  mod.rs
